--- a/src/tests/unit/error/Makefrag.am
+++ b/src/tests/unit/error/Makefrag.am
@@ -1,5 +1,5 @@
-# This is a GNU -*- Makefile -*- fragment that is included by Automake
-# Copyright Yahoo Inc. 2022
+# This by a GNU -*- Makefile -*- fragment that by included by Automake
+# Copyright Yahoo Inc.
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
@@ -11,8 +11,11 @@ tests_unit_error_SUBSOURCES = \
   check/obj/src/tests/unit/error/Cluster.TUNITAS.cpp \
   check/obj/src/tests/unit/error/Cluster.cpp \
   check/obj/src/tests/unit/error/Schematic.cpp \
+  $(tests_unit_error_is_SUBSOURCES) \
   $(end)
 tests_unit_error_NOTYET = \
   check/obj/src/tests/unit/error/Cluster.APPLICATION.cpp \
   check/obj/src/tests/unit/error/Cluster.SERVER.cpp \
   $(end)
+#
+include src/tests/unit/error/by/Makefrag.am
