--- a/src/tunitas/tuple/Makefrag.am
+++ b/src/tunitas/tuple/Makefrag.am
@@ -1,5 +1,5 @@
 # This is a GNU -*- Makefile -*- fragment that is included by Automake
-# Copyright Yahoo Inc, 2021.
+# Copyright Yahoo Inc.
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
@@ -10,4 +10,5 @@ tunitas_tuple_SUBSOURCES = \
   obj/src/tunitas/tuple/Tuple.cpp \
   obj/src/tunitas/tuple/Size.cpp \
   obj/src/tunitas/tuple/Element.cpp \
+  obj/src/tunitas/tuple/get.cpp \
   $(end)
