--- a/lib/libtunitas.am
+++ b/lib/libtunitas.am
@@ -1,12 +1,12 @@
 # This is a GNU -*- Makefile -*- fragment that is included by Automake
-# Copyright Yahoo Inc. 2022
+# Copyright Yahoo Inc.
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
 #
-lib_libtunitas_la_CURRENT = 22
-lib_libtunitas_la_REVISION = 1
-lib_libtunitas_la_AGE = 5
+lib_libtunitas_la_CURRENT = 24
+lib_libtunitas_la_REVISION = 0
+lib_libtunitas_la_AGE = 7
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 lib_libtunitas_la_VERSION_INFO = -version-info $(lib_libtunitas_la_CRA)
 #
