--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -19,9 +19,8 @@ tests_unit_SUBSOURCES = \
   check/obj/src/tests/unit/exits.Fixture.cpp \
   $(tests_unit_for_each_SUBSOURCES) \
   $(tests_unit_number_SUBSOURCES) \
-  check/obj/src/tests/unit/outcome.Fixture.cpp \
-  check/obj/src/tests/unit/outcome.Fixture.Uncopyable.cpp \
-  check/obj/src/tests/unit/outcome.Usage.cpp \
+  $(tests_unit_optional_SUBSOURCES) \
+  $(tests_unit_outcome_SUBSOURCES) \
   $(tests_unit_required_SUBSOURCES) \
   $(tests_unit_server_SUBSOURCES) \
   check/obj/src/tests/unit/time.Fixture.cpp \
@@ -29,6 +28,7 @@ tests_unit_SUBSOURCES = \
   check/obj/src/tests/unit/time.duration.Fixture.cpp \
   check/obj/src/tests/unit/time.ratio.Fixture.cpp \
   check/obj/src/tests/unit/tunitas.Fixture.cpp \
+  check/obj/src/tests/unit/tuple.Fixture.cpp \
   check/obj/src/tests/unit/urlsafe.Fixture.cpp \
   check/obj/src/tests/unit/variant.Fixture.cpp \
   check/obj/src/tests/unit/want.Fixture.cpp \
@@ -43,5 +43,8 @@ include src/tests/unit/error/Makefrag.am
 include src/tests/unit/exception/Makefrag.am
 include src/tests/unit/for_each/Makefrag.am
 include src/tests/unit/number/Makefrag.am
+include src/tests/unit/optional/Makefrag.am
+include src/tests/unit/outcome/Makefrag.am
 include src/tests/unit/required/Makefrag.am
 include src/tests/unit/server/Makefrag.am
+
