--- a/src/tests/unit/number/mp/Makefrag.am
+++ b/src/tests/unit/number/mp/Makefrag.am
@@ -7,6 +7,7 @@ tests_unit_number_mp_SUBSOURCES = \
   check/obj/src/tests/unit/number/mp/Fixture.cpp \
   check/obj/src/tests/unit/number/mp/Driver.cpp \
   check/obj/src/tests/unit/number/mp/Outbound.cpp \
+  check/obj/src/tests/unit/number/mp/Integer.cpp \
   $(end)
 #
 include src/tests/unit/number/mp/required/Makefrag.am
