--- a/lib/libtunitas.am
+++ b/lib/libtunitas.am
@@ -5,7 +5,7 @@
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
 #
 lib_libtunitas_la_CURRENT = 22
-lib_libtunitas_la_REVISION = 1
+lib_libtunitas_la_REVISION = 2
 lib_libtunitas_la_AGE = 5
 lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
 lib_libtunitas_la_VERSION_INFO = -version-info $(lib_libtunitas_la_CRA)
@@ -16,7 +16,7 @@ lib_libtunitas_la_CXXFLAGS = $(PACKAGE_CXXFLAGS_SET)
 lib_libtunitas_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET)
 lib_libtunitas_la_LIBADD = noinst/lib/libtunitas.la
 lib_libtunitas_la_MODULES = $(none)
-lib_libtunitas_la_SOURCES = $(none)
+lib_libtunitas_la_SOURCES = $(none) obj/src/tunitas/namespace.cpp
 #
 # DSO API versioning; see the README which is nearby.
 # else https://wiki.scold-lang.org/page/DSO
