--- a/lib/libtunitas-application.am
+++ b/lib/libtunitas-application.am
@@ -5,7 +5,7 @@
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
 #
 lib_libtunitas_application_la_CURRENT = 8
-lib_libtunitas_application_la_REVISION = 0
+lib_libtunitas_application_la_REVISION = 1
 lib_libtunitas_application_la_AGE = 0
 lib_libtunitas_application_la_CRA = $(lib_libtunitas_application_la_CURRENT):$(lib_libtunitas_application_la_REVISION):$(lib_libtunitas_application_la_AGE)
 lib_libtunitas_application_la_VERSION_INFO = -version-info $(lib_libtunitas_application_la_CRA)
@@ -15,7 +15,7 @@ lib_libtunitas_application_la_CXXFLAGS = $(PACKAGE_CXXFLAGS_SET)
 lib_libtunitas_application_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) $(lib_libtunitas_application_la_VERSION_INFO)
 lib_libtunitas_application_la_LIBADD = noinst/lib/libtunitas-application.la
 lib_libtunitas_application_la_MODULES = $(none)
-lib_libtunitas_application_la_SOURCES = $(none)
+lib_libtunitas_application_la_SOURCES = $(none) obj/src/tunitas/application/namespace.cpp
 #
 # DSO API versioning; see the README which is nearby.
 # else https://wiki.scold-lang.org/page/DSO
