--- a/lib/libtunitas-server.am
+++ b/lib/libtunitas-server.am
@@ -5,7 +5,7 @@
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
 #
 lib_libtunitas_server_la_CURRENT = 6
-lib_libtunitas_server_la_REVISION = 3
+lib_libtunitas_server_la_REVISION = 4
 lib_libtunitas_server_la_AGE = 1
 lib_libtunitas_server_la_CRA = $(lib_libtunitas_server_la_CURRENT):$(lib_libtunitas_server_la_REVISION):$(lib_libtunitas_server_la_AGE)
 lib_libtunitas_server_la_VERSION_INFO = -version-info $(lib_libtunitas_server_la_CRA)
@@ -16,7 +16,7 @@ lib_libtunitas_server_la_CXXFLAGS = $(PACKAGE_CXXFLAGS_SET)
 lib_libtunitas_server_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) $(lib_libtunitas_server_la_VERSION_INFO)
 lib_libtunitas_server_la_LIBADD =  noinst/lib/libtunitas-server.la
 lib_libtunitas_server_la_MODULES = $(none)
-lib_libtunitas_server_la_SOURCES = $(none)
+lib_libtunitas_server_la_SOURCES = $(none) obj/src/tunitas/server/namespace.cpp
 #
 # DSO API versioning; see the README which is nearby. (probably in ../README)
 #
